# baldnes-emulator

./: .gitignore  Makefile  README.md
.github/workflows/: basic-pipeline.yml
emulator/: Cargo.toml
emulator/src/: addressing.rs  bus.rs  cartridge.rs  chr_rom.rs  cpu.rs  empty_device.rs  enums.rs  file_loader.rs  i_nes.rs  lib.rs  main.rs  memory.rs  mirroring.rs  nes_2.rs  prg_rom.rs
emulator/src/cartridge/: cartridge.rs  file_loader.rs  i_nes.rs  mod.rs  nes_2.rs
emulator/src/cartridge/common/: consts.rs  enums.rs  mod.rs
emulator/src/cartridge/common/enums/: errors.rs  mirroring.rs  mod.rs  nes.rs
emulator/src/cartridge/common/traits/: cartridge_data.rs  file_loadable.rs  mod.rs
emulator/src/cartridge/common/utils/: file.rs
emulator/src/cartridge/formats/: i_nes.rs  mod.rs  nes_2.rs
emulator/src/cartridge/registers/: chr_ram.rs  chr_rom.rs  mod.rs  prg_ram.rs  prg_rom.rs
emulator/src/cpu/: cpu.rs  micro_instructions.rs  mod.rs  operations.rs  registers.rs
emulator/src/logging/: mod.rs  nes_logging.rs
emulator/src/ppu/: mod.rs  ppu.rs
emulator/src/ppu/palette_ram/: mod.rs  palette_ram.rs
emulator/src/ppu/registers/: mod.rs  ppu_addr.rs  ppu_ctrl.rs  ppu_data.rs
emulator/src/ppu/vram/: vram.rs
emulator/src/vram/: vram.rs
emulator/tests/: int_ppu.rs
