[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
thiserror = "1.0.64"
byteorder = "1.5.0"
bitflags = "2.6.0"
log = "0.4.22"
chrono = "0.4.38"
log4rs = "1.3.0"
